--- a/index.html
+++ b/index.html
@@ -1,15 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Simple Website</title>
-    <link rel="stylesheet"
-      href="./css/styles.css">
+    <link rel="stylesheet" href="./css/styles.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@picocss/pico@2/css/pico.min.css">
+
 </head>
-<body>
+
+<body class="container">
     <h1>Welcome</h1>
     <img src="./img/professor.svg" alt="My Instructor">
     <p>I am practicing the use of Version Control as I learn JavaScript. Join me on the journey!</p>
 </body>
+
 </html>
