--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>My Simple Website</title>
     <link rel="stylesheet" href="./css/styles.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@picocss/pico@2/css/pico.min.css">
+    <script src="./js/main.js" type="module"></script>
 
 </head>
 
